--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Inter, sans-serif;
+  background-color: #f0f2fa;
+  font-size: 12px;
 }
 
 a {
@@ -13,4 +14,23 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --black: #171717;
+  --white: "#FFFFFF";
+  --gray: #B9B9B9;
+
+  --primary: #2F49D1;
+  --secondary: #B6C1E9;
+  
+  --info: #5887FF;
+  --danger: #F26464;
+  --warning: #FFB648;
+  --success: #4BDE97;
+
+
+  --placeholder: #D6D7E3;
+  --input-bg: #EFF0F6;
+
 }
