--- a/components/Header/Htag.module.scss
+++ b/components/Header/Htag.module.scss
@@ -6,12 +6,14 @@
   font-weight: bold;
   font-size: 24px;
   line-height: 34px;
+  margin-bottom: 20px;
 }
 
 .h2 {
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
+  margin-bottom: 5px;
 }
 
 .h3 {
