--- a/components/SmallCard/SmallCard.module.scss
+++ b/components/SmallCard/SmallCard.module.scss
@@ -1,8 +1,16 @@
 .box {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  width: 270px;
+  height: 137px;
   padding: 19px;
   box-shadow: 0px 15px 50px rgba(160, 163, 189, 0.1);
   border-radius: 10px;
   background-color: var(--white);
+
+
 }
 
 .title {
@@ -12,6 +20,7 @@
   font-size: 14px;
   line-height: 17px;
   color: #b9b9b9;
+  margin-bottom: 5px;
 }
 
 .text {
@@ -20,4 +29,16 @@
   font-size: 14px;
   line-height: 17px;
   color: #b9b9b9;
+}
+
+.bottom {
+  display: flex;
+}
+
+.trends {
+  margin-right: 5px;
+}
+
+.percent {
+  margin-right: 10px;
 }
