--- a/components/SmallCard/SmallCard.module.scss
+++ b/components/SmallCard/SmallCard.module.scss
@@ -9,8 +9,6 @@
   box-shadow: 0px 15px 50px rgba(160, 163, 189, 0.1);
   border-radius: 10px;
   background-color: var(--white);
-
-
 }
 
 .title {
@@ -41,4 +39,16 @@
 
 .percent {
   margin-right: 10px;
+}
+
+.green {
+  color: var(--success);
+}
+
+.yellow {
+  color: var(--warning);
+}
+
+.red {
+  color: var(--danger);
 }
