--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,9 +16,13 @@ a {
   box-sizing: border-box;
 }
 
+button {
+  padding: 0;
+}
+
 :root {
   --black: #171717;
-  --white: "#FFFFFF";
+  --white: #FFFFFF;
   --gray: #B9B9B9;
 
   --primary: #2F49D1;
