feat: added chart and sideblock components

--- a/parts/Main/Dashboard/Dashboard.module.scss
+++ b/parts/Main/Dashboard/Dashboard.module.scss
@@ -1,9 +1,16 @@
 .container {
     padding: 20px;
+    width: 100%;
 }
 
-.box {
+.firstRow {
     display: grid;
-    grid-template-columns: repeat(4, 270px);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
+    grid-gap: 20px;
+    margin-bottom: 20px;
+}
+
+.secondRow {
+    display: flex;
 }
