--- a/parts/Main/Chart/Chart.module.css
+++ b/parts/Main/Chart/Chart.module.css
@@ -1,7 +1,8 @@
 .box {
-  width: 850px;
+  width: 100%;
   height: 370px;
   background: #ffffff;
   box-shadow: 0px 15px 50px rgba(160, 163, 189, 0.1);
   border-radius: 10px;
+  margin-bottom: 20px;
 }
