--- a/parts/Main/Dashboard/Dashboard.module.scss
+++ b/parts/Main/Dashboard/Dashboard.module.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     width: 100%;
 }
 
@@ -13,4 +13,7 @@
 
 .secondRow {
     display: flex;
+    justify-content: space-between;
+    width:100%;
+    margin-bottom: 15px;
 }
