--- a/parts/Main/Table/Table.module.css
+++ b/parts/Main/Table/Table.module.css
@@ -1,10 +1,9 @@
 .box {
     width: 100%;
-    height: 256px;
-    background: var(--primary);
+    height: 370px;
     box-shadow: 0px 15px 50px rgba(160, 163, 189, 0.1);
     border-radius: 10px;
     display: flex;
-    margin-bottom: 20px;
+    background-color: #fff;
   }
   
