--- a/parts/Main/SideBlock/SideBlock.module.css
+++ b/parts/Main/SideBlock/SideBlock.module.css
@@ -1,10 +1,30 @@
 .box {
     width: 100%;
     height: 256px;
-    background: var(--primary);
-    box-shadow: 0px 15px 50px rgba(160, 163, 189, 0.1);
-    border-radius: 10px;
     display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
+    overflow: hidden;
   }
   
+  .sideBlock {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 20px 20px 5px 20px;
+  }
+
+  .title {
+    margin-bottom: 5px;
+  }
+
+  .text {
+    padding: 0 20px;
+    color: var(--gray);
+  }
