--- a/components/Htag/Htag.module.scss
+++ b/components/Htag/Htag.module.scss
@@ -25,7 +25,8 @@
 
 .h4 {
   font-weight: 500;
-  font-size: 12px;
-  line-height: 140%;
-  letter-spacing: -0.3px;
+  font-size: 14px;
+  line-height: 34px;
+  color: #171717;
+  margin-bottom: 5px;
 }
